force-app/main/default/objects/SEG_GruposCSO__c/SEG_GruposCSO__c.object-meta.xml
<CustomObject>
    <label>Grupos CSO</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Grupo CSO</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grupos CSO</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>