force-app/main/default/objects/SEG_GruposCSO__c/fields/SEG_ActivoCSO__c.field-meta.xml
<CustomField>
    <fullName>SEG_ActivoCSO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activo CSO</label>
    <type>Checkbox</type>
</CustomField>