force-app/main/default/objects/SEG_GruposCSO__c/fields/SEG_Codigo__c.field-meta.xml
<CustomField>
    <fullName>SEG_Codigo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Código</label>
    <length>255</length>
    <type>Text</type>
</CustomField>