force-app/main/default/objects/SEG_GruposCSO__c/fields/SEG_Preciominuto__c.field-meta.xml
<CustomField>
    <fullName>SEG_Preciominuto__c</fullName>
    <label>Precio/minuto</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>