force-app/main/default/objects/SEG_GruposCSO__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SEG_Codigo__c</columns>
    <columns>SEG_ActivoCSO__c</columns>
    <columns>SEG_Preciominuto__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>